--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <body>
     <header>
       <div class="logo">
-        <form action="index_seeit.html" method="get">
-            <a href="index_seeit.html"><img type="logo" src="Bilder/uat-logo.png" alt="University of Advancing Technologies logo"></a>
+        <form action="index.html" method="get">
+            <a href="index.html"><img type="logo" src="Bilder/uat-logo.png" alt="University of Advancing Technologies logo"></a>
         </form>
       </div>
 
         <nav>
             <div class="navbar" id="topnav">
-                <a href="index_seeit.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="explore_seeit.html">Our Degrees</a>
                 <a href="contact_seeit.html">Request info</a> 
             </div>
