--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
             </h4>
         </div>
         
-        <br>
-        <br>
        <div class="dropdown">
             <button class="dropbtn">I WOULD LIKE A DEGREE IN</button>
                 <div class="dropdown-content">
@@ -41,24 +39,22 @@
                     <a href="explore_seeit.html">See online degrees</a>
                     <a href="explore_seeit.html">Advertising Art</a>
                     <a href="explore_seeit.html">Advancing computer science</a>
-                    <a href="explore_seeit.html">Artificial Intelligence</a>
-                    <a href="explore_seeit.html">Business Technology</a>
                 </div>   
             </div> 
 
     <img class="vector" src="Bilder/NicePng_vectores-png_1057468.png" alt="Technology city vector background">
     
-    <footer>
-    <div class="footer1">
+    <footer class="footer">
+        <div class="footer1">
             <h3>ANNOUNCEMENTS</h3>
             <h4>COVID 19 UPDATES</h4>
             <p>Precautions we're taking in an effort to protect our UAT family [...]</p>
-    </div>
-    <div class="footer2">
+        </div>
+        <div class="footer2">
             <h3>NEWS & EVENTS</h3>
             <h4>UAT VIRTUAL OPEN HOUSE</h4>
             <p>Take an immersive look at our innovative degree programs to see [...]</p>
-        </footer>
-    </div>
+        </div>
+    </footer>
     </body>
 </html>
