--- a/explore_seeit.html
+++ b/explore_seeit.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <header>
-      <div class="logo">
+       <div class="logo">
         <form action="index.html" method="get">
             <a href="index.html"><img type="logo" src="Bilder/uat-logo.png" alt="University of Advancing Technologies logo"></a>
         </form>
@@ -21,18 +21,17 @@
             </div>
         </nav>
     </header>
+
         <br>
 
         <div class="overskrift">
             <h1>FIND YOUR FIT</h1>
             <h4>EXPLORE OUR DEGREES</h4>
         </div>
-
         <hr>
-
     <img class="icons" src="Bilder/icons_wide.png" alt="Icons for the different degrees">
 
-    <footer>
+    <footer class="footer">
         <div class="footer1">
             <p>© 2020 UNIVERSITY OF ADVANCING TECHNOLOGY</p>
         </div>
